After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758596 - libview: Fix warning with no document loaded
libview: Fix warning with no document loaded
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-24 13:36 UTC by Bastien Nocera
Modified: 2015-11-25 16:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libview: Fix warning with no document loaded (1.14 KB, patch)
2015-11-24 13:36 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2015-11-24 13:36:08 UTC
.
Comment 1 Bastien Nocera 2015-11-24 13:36:12 UTC
Created attachment 316167 [details] [review]
libview: Fix warning with no document loaded

When switching to the view in gnome-documents or gnome-books, the EvView
would get a focus event before the document was loaded, where we'd try
to access structures that were only there if the document was loaded.
Comment 2 Carlos Garcia Campos 2015-11-25 16:20:40 UTC
Comment on attachment 316167 [details] [review]
libview: Fix warning with no document loaded

Thanks
Comment 3 Bastien Nocera 2015-11-25 16:29:37 UTC
Attachment 316167 [details] pushed as 90b1d4f - libview: Fix warning with no document loaded