libview: Fix warning with no document loaded

When switching to the view in gnome-documents or gnome-books, the EvView
would get a focus event before the document was loaded, where we'd try
to access structures that were only there if the document was loaded.

https://bugzilla.gnome.org/show_bug.cgi?id=758596